# sensex-points-prediction

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  index.html  pyproject.toml  requirements.txt
configs/: data.yaml  model.yaml
notebooks/: dataProcessing.ipynb  ml-pipeline.ipynb
scripts/: inference.py  preprocessing.py  training.py
sensex-prediction/sensex_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sensex/apis/: predict.py
sensex/core/: preprocess.py  train.py
sensex/sensex_prediction.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sensex/utils/: config.py  io_utils.py  logger.py  model_utils.py
